# OOP

./: README.md
1/: CMakeLists.txt  README.md  main.cpp  nod.cpp  nod.hpp  tests.cpp
2/: README.md  hex.hpp  hex_bool_op.cpp  hex_cdg.cpp  hex_math_op.cpp
3/: CMakeLists.txt  README.md  main.cpp  tests.cpp
3/include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  triangle.hpp
3/src/: array.cpp  hexagon.cpp  octagon.cpp  triangle.cpp
4/: CMakeLists.txt  README.md  main.cpp  tests.cpp
4/include/: array.hpp  figure.hpp  hexagon.hpp  octagon.hpp  shared_methods.hpp  triangle.hpp
5/: CMakeLists.txt  README.md  main.cpp  tests.cpp
5/include/: allocator.hpp  vector.hpp
6/: CMakeLists.txt  main.cpp  tests.cpp
6/include/: druid.hpp  factory.hpp  fighters.hpp  npc.hpp  observer.hpp  orc.hpp  slaver.hpp
6/src/: druid.cpp  factory.cpp  fighters.cpp  npc.cpp  observer.cpp  orc.cpp  slaver.cpp
7/: main.cpp  tests.cpp
7/include/: druid.hpp  fighters.hpp  fm.hpp  npc.hpp  observer.hpp  orc.hpp  slaver.hpp
7/src/: druid.cpp  fighters.cpp  fm.cpp  npc.cpp  observer.cpp  orc.cpp  slaver.cpp
